tests/baselines/reference/parserStrictMode14.errors.txt
==== tests/cases/compiler/parserStrictMode14.ts (2 errors) ====
    "use strict";
    with (a) {
    ~~~~
!!! parserStrictMode14.ts(2,1): error TS1100: 'with' statements are not allowed in strict mode.
          ~
!!! parserStrictMode14.ts(2,7): error TS2135: All symbols within a with block will be resolved to 'any'.
    }